볼링 1단계-Frame객체 nextFrame인스턴스 변수 추가, set메서드 제거