@@ -3,6 +3,7 @@ package view;
 import domain.frame.Frame;
 
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Scanner;
 
 public class InputView {
@@ -13,17 +14,17 @@ public class InputView {
 		return scanner.nextLine();
 	}
 
-	public static int showGetPinCountView(LinkedList<Frame> frames) {
+	public static int showGetPinCountView(List<Frame> frames) {
 		System.out.print(getNextFrameNumber(frames) + "프레임 투구 : ");
 		return Integer.parseInt(scanner.nextLine());
 	}
 
-	private static int getNextFrameNumber(LinkedList<Frame> frames) {
+	private static int getNextFrameNumber(List<Frame> frames) {
 		if(frames.isEmpty()) {
 			return Frame.MIN_FRAME_NUMBER;
 		}
 
-		if(frames.getLast().isComplete()) {
+		if(frames.get(frames.size() - 1).isComplete()) {
 			return frames.size() + 1;
 		}
 
